# rust-template

./: .pre-commit-config.yaml  Cargo.toml  README.md  cargo-generate.toml
.github/workflows/: ci.yml
crates/core/: Cargo.toml
crates/core/src/: lib.rs
