[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/andrewgazelka/{{project-name}}"

[workspace.dependencies]
# Error handling & logging
color-eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Internal crates
{{crate_name}}-core = { path = "crates/core" }

[workspace.lints.clippy]
# Deny all categories
complexity = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }

# Allow casts (common in systems code)
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"

# Allow specific lints - Code style
collapsible_if = "allow"
doc_lazy_continuation = "allow"
doc_markdown = "allow"
many_single_char_names = "allow"
match_same_arms = "allow"
single_match_else = "allow"
uninlined_format_args = "deny"

# Allow specific lints - Documentation
missing_const_for_fn = "allow"
missing_docs_in_private_items = "allow"
missing_errors_doc = "allow"

# Allow specific lints - Design patterns
future_not_send = "allow"
must_use_candidate = "allow"
needless_pass_by_value = "allow"
option_if_let_else = "allow"
significant_drop_tightening = "allow"
struct_excessive_bools = "allow"

# Allow specific lints - Miscellaneous
multiple_crate_versions = "allow"
similar_names = "allow"

# Deny specific lints - Safety
char_indices_as_byte_indices = "deny"
indexing_slicing = "deny"
string_slice = "deny"

# Deny specific lints - Code quality
allow_attributes = "deny"
allow_attributes_without_reason = "deny"
cognitive_complexity = "deny"
excessive_nesting = "deny"
missing_panics_doc = "deny"
print_stdout = "deny"
print_stderr = "deny"

[workspace.lints.rust]
# Deny categories
deprecated_safe = { level = "deny", priority = -1 }
future_incompatible = { level = "deny", priority = -1 }
keyword_idents = { level = "deny", priority = -1 }
rust_2018_idioms = { level = "deny", priority = -1 }

# Warn
unsafe_code = "warn"
